# arena-evals

./: .pre-commit-config.yaml  README.md  pyproject.toml  responses.json  ruff.toml
.github/workflows/: pr-ci.yaml  pre-commit.yaml
exercises/intro/: alignment_faking.py  intro.ipynb  intro.py
src/arena_evals/: __init__.py  response.py  setup.py  utils.py
